# sso_miante

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
developer/: test.py
developer/core/: urls.py  views.py
developer/core/templates/: index.html
developer/developer/: asgi.py  settings.py  urls.py  wsgi.py
developer/sso_miante/: urls.py  views.py
developer/sso_miante/templates/sso/: admin.html  detail.html
developer/sso_miante_client/: urls.py  views.py
developer/sso_miante_client/templates/sso-miante/: login.html
developer/user/: admin.py  forms.py  models.py  urls.py  views.py
developer/user/migrations/: 0001_initial.py
developer/user/templates/: update_password.html
src/sso_miante/: __init__.py  apps.py  models.py  urls.py
src/sso_miante.egg-info/: PKG-INFO  SOURCES.txt
src/sso_miante/migrations/: 0001_initial.py  0002_ssomiante_server.py
src/sso_miante/templates/sso/: admin.html
src/sso_miante_client/: __init__.py  apps.py  views.py
versions/: pyproject.toml  sso_miante-0.1.2-py3-none-any.whl  sso_miante-0.1.3-py3-none-any.whl  sso_miante-0.1.4-py3-none-any.whl
